# kibana-mcp-server

./: .gitignore  EXAMPLES.md  README.md  mcp_config.example.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
skills/kibana-analysis/: SKILL.md
src/kibana_mcp_server/: __init__.py  server.py
