[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kibana-mcp-server"
version = "0.0.1"
description = "MCP Server for Kibana log querying with automatic authentication"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Development Team" }
]
keywords = ["mcp", "kibana", "elasticsearch", "logs", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
kibana-mcp-server = "kibana_mcp_server.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/kibana_mcp_server"]
